# HelmholtzBEM

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
.kdev4/: HelmholtzBEM.kdev4
cmake/functions/: GetH2Lib.cmake
data/: README.md
examples/: CMakeLists.txt  debugging_SVs.cpp  direct_v_arnoldi.cpp  direct_v_arnoldi_1st_der.cpp  direct_v_arnoldi_2nd_der.cpp  dirichlet_example.cpp  find_resonances.cpp  neumann_example.cpp  parabolic_approximation.cpp  plot_solution_polygon.cpp  plot_solution_square.cpp  roots_brent_circle.cpp  roots_brent_circle_arnoldi.cpp  roots_brent_polygon.cpp  roots_brent_polygon_rsvd.cpp  roots_brent_square.cpp  roots_brent_square_arnoldi.cpp  roots_brent_square_rsvd.cpp  roots_mixed_circle_arnoldi.cpp  roots_mixed_square_arnoldi.cpp  roots_newton_circle.cpp  roots_newton_circle_arnoldi.cpp  roots_newton_polygon_rsvd.cpp  roots_newton_square.cpp  roots_newton_square_arnoldi.cpp  roots_newton_square_rsvd.cpp  roots_seq_circle_arnoldi.cpp  roots_seq_square_arnoldi.cpp  rsvd_test.cpp  snapshots.cpp  sv_circle.cpp  sv_circle_arnoldi.cpp  sv_derivative_full.cpp  sv_derivative_verification_circle.cpp  sv_derivative_verification_square.cpp  sv_square.cpp  sv_square_arnoldi.cpp  transmission_problem_verification.cpp  verify_solution_analytic.cpp
include/: abstract_bem_space.hpp  abstract_parametrized_curve.hpp  cbessel.hpp  continuous_space.hpp  cspline.hpp  discontinuous_space.hpp  find_roots.hpp  galerkin_builder.hpp  galerkin_matrix_builder.hpp  gauleg.hpp  gen_sol.hpp  gen_sol_op.hpp  h2lib_interface.hpp  hmatrix.hpp  incoming.hpp  parametrized_circular_arc.hpp  parametrized_fourier_sum.hpp  parametrized_line.hpp  parametrized_mesh.hpp  parametrized_polynomial.hpp  parametrized_semi_circle.hpp  randsvd.hpp  scatterer.hpp  solvers.hpp
plots/: README.md
source/: CMakeLists.txt  double_layer.cpp  double_layer_der.cpp  double_layer_der2.cpp  galerkin_builder.cpp  galerkin_matrix_builder.cpp  hypersingular.cpp  hypersingular_der.cpp  hypersingular_der2.cpp  mass_matrix.cpp  single_layer.cpp  single_layer_der.cpp  single_layer_der2.cpp
source/modules/solveBVP/: first_kind_direct_dirichlet.cpp
source/parametrizations/: parametrized_circular_arc.cpp  parametrized_line.cpp  parametrized_mesh.cpp  parametrized_polynomial.cpp  parametrized_semi_circle.cpp
source/quadrature/: genLaguerreRule.cpp
source/utilities/: CMakeLists.txt  arpp_eig_interface.cpp  cbessel.cpp  cspline.cpp  find_roots.cpp  gen_sol.cpp  gen_sol_op.cpp  h2lib_interface.cpp  hmatrix.cpp  incoming.cpp  randsvd.cpp  scatterer.cpp  singular_values.cpp  singular_values_arnoldi.cpp  solvers.cpp
test/googletest/: CMakeLists.txt  double_layer_test.cpp  hypersingular_test.cpp  mass_matrix_test.cpp  single_layer_test.cpp  solutions_test.cpp
test/googletest/include/gtest/: gtest-printers.h
